--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Expanse allows for a world of innovation built on top of its distributed technol
         </div>
     </div>
 </div>
-<!--------------------------------------------------------------------- DOWNLOADS  ----------------------------------->	
+<!--------------------------------------------------------------------- DOWNLOADS  ----------------------------------- -->
 <section id="downloads" class="section4">	
 	<div class="container">
 		<div class="row">
@@ -296,7 +296,7 @@ new world</h2></div>
 		</div>
 	</div>	
 </section>
-<!--------------------------------------------------------------------- DOCUMENTATION  ----------------------------------->	
+<!--------------------------------------------------------------------- DOCUMENTATION  ----------------------------------- -->	
 <section id="documentation" class="section6">	
 	<div class="container">
 		<div class="row">
@@ -332,7 +332,7 @@ an array of documentation is available to help you use and understand Expanse.</
 	</div>
 </div>
 </section>	
-<!--------------------------------------------------------------------- TEAM  ----------------------------------->	
+<!--------------------------------------------------------------------- TEAM  ----------------------------------- -->	
 <section id="team" class="section7">	
 	<div class="container">
 		<div class="row">
