--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Expanse allows for a world of innovation built on top of its distributed technol
 </section>
 	
 	
-<!--------------------------------------------------------------------------------------------------- DOWNLOADS MODALS ----------------------------------->	  
+<!--------------------------------------------------------------------------------------------------- DOWNLOADS MODALS ----------------------------------- -->	  
 
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="vertical-alignment-helper">
